style.css
/* ... */
#hmenu li
{
  padding: 10px 0;
  font-size: 30px;
  margin: 0 auto;
  width: 200px;
  text-align: center;
  border-bottom: 1px solid var(--neon-red);
}

#hmenu > li:last-child
{
  border-bottom: none;
}

#menuToggle input:checked ~ ul
{
  transform: scale(1.0, 1.0);
  opacity: 1;
}

/*@import url('css/mosaic.css');*/
.mosaic {
  display: block;
  width: var(--container-width-1000);
}

.mosaic-highlight {
  display: block;
  background-size: cover;
  height: 550px;
  background-position: 50%;
  background-repeat: no-repeat;
}

.highlight-contents {
  text-align: right;
  position: relative;
  font-size: 20px;
  line-height: 25px;
}

a.author.url.fn {
  text-transform: uppercase;
  font-weight: bold;
  color: var(--neon-red);
}

a.author.url.fn:visited {
  color: var(--neon-red);
}

a.author.url.fn:hover {
  color: var(--neon-blue);
}

.highlight-title {
  margin-top: 5px;
  font-weight: 800;
  text-transform: uppercase;
  font-family: var(--font-title), sans-serif;
	margin-left: 20%;
}

.highlight-tag {
  padding: 0 10px;
  text-transform: uppercase;
  font-family: var(--font-title), sans-serif;
  font-size: 30px;
  line-height: 50px;
	font-weight: bold;
  color: var(--neon-blue);
  background-color: rgba(7, 15, 32, 0.9);
  /*border: 2px var(--neon-blue) solid;*/
  position: absolute;
  bottom: 0;
  right: 0;
}

.news-tag-container {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.news-tag {
  text-transform: uppercase;
  font-family: var(--font-title), sans-serif;
  font-weight: bold;
  font-size: 25px;
  line-height: 30px;
  color: var(--neon-blue);
  margin: 0 auto;
  width: auto;
  display: inline-block;
}

.mosaic-news {
  display: block;
}

.authors {
  text-transform: uppercase;
  font-family: var(--font-title), sans-serif;
}

.mosaic-row-1 {
  margin-bottom: 60px;
  width: 100%;
}

.mosaic-row-2 {
  height: 600px;
  margin-bottom: 60px;
  width: 100%;
}

.mosaic-row-3 {
  height: 350px;
  width: 100%;
  margin-bottom: 20px;
}

.mosaic-row-4 {
  height: 350px;
  width: 100%;
  text-align: center;
}

.mosaic-column-1 {
  width: 29%;
  float: left;
}

.mosaic-column-2 {
  width: 29%;
  float: right;
}


.mosaic-column-3 {
  width: 29%;
  display: inline-block;
  margin: 0 2%;
  height: 100%;
  vertical-align: top;
}


.highlight-contents-1 {
  width: 100%;
}

.highlight-contents-2 {
  width: 69%;
  /*height: 500px;*/
  float: right;
  font-size: 18px;
  line-height: 23px;
}

.highlight-contents-3 {
  width: 69%;
  height: 200px;
  float: left;
  font-size: 18px;
  line-height: 23px;
}

.mosaic-highlight-1 {
  height: 550px;
  position: relative;
}

.mosaic-highlight-2 {
  height: 500px;
  position: relative;
}

.mosaic-highlight-3 {
  height: 200px;
}

.highlight-title-1 {
  font-size: 40px;
  line-height: 40px;
}

.highlight-subtitle-1 {
  font-size: 30px;
  line-height: 30px;
}

.highlight-title-2 {
  font-size: 35px;
  line-height: 35px;
}

.highlight-subtitle-2 {
  font-size: 25px;
  line-height: 25px;
}

.mosaic-news {
  width: 100%;
  height: 50%;
}

.mosaic-news-1 {
  width: 100%;
  height: 50%;
  margin-bottom: 20px;
}

.mosaic-news-contents {
  width: 100%;
  text-align: center;
  margin: 0px auto;
  font-size: 14px;
  line-height: 16px;
}

.mosaic-news-title {
  font-family: var(--font-text), sans-serif;
  margin: 5px 0 0 0;
  font-size: 25px;
  line-height: 25px;
  font-weight: bold;
  text-transform: uppercase;
}

.mosaic-news-title-1 {
  font-size: 20px;
  line-height: 25px;
}

.mosaic-news-subtitle-1 {
  font-size: 18px;
  line-height: 12px;
  font-weight: lighter;
}

.mosaic-news-image {
  width: 100%;
  height: 200px;
  background-size: cover;
  background-position: 50%;
  background-repeat: no-repeat;
  position: relative;
}

.mosaic-news-image-1 {
  height: 180px;
}

.news-gradient-black {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.80;
  background: linear-gradient(to bottom, transparent 70%, black 100%);
}
/* ... */

